--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "task",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://jekabskulis.000webhostapp.com/upload.php",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "html-react-parser": "^5.1.10",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
